# llm-from-scratch

./: .gitignore  README.md  pyproject.toml
gpt/: 5.2-exercise.py  5.2-training-sample.py  5.5-exercise.py  classifier.py  configs.py  generate.py  gpt.py  instructions.py  loaders.py  train.py  trained_model.py
gpt/fine_tuning/classification/: dataset.py  fetcher.py  loaders.py
notes/: README.md
notes/examples/: attention.py  data_loader_v1.py  notes.py  tokenizer_v1.py
