[tool.poetry]
name = "llm-from-scratch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
tiktoken = "^0.9.0"
torch = "^2.6.0"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
